--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  date_format: "%d/%m/%Y, %H:%M:%S"
   hello: "Hello world"
   header:
     menu : "Thực Đơn"
