--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,8 @@ en:
     contact_us: "Liên Hệ"
     all: "Tất Cả"
 
+  views:
+    orders:
+      order: "Order"
+      new:
+        example: "Tòa nhà keangnam, đường Phạm Hùng, Quận Nam Từ Liêm"
