--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
         name: Tên danh mục
         created_at: Ngày Tạo
         action: Hành động
+        description: Mô tả
     foods:
       index:
         name: Tên đồ ăn
